# automaton-auditor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_audit.py  verify_logic.py
audit/peer_audit/: peer_audit_report.md
audit/report_onself_generated/: report.md
src/: __init__.py  graph.py  models.py  state.py
src/nodes/: __init__.py  detectives.py  judges.py  justice.py  optimizers.py
src/tools/: __init__.py  doc_tools.py  repo_tools.py
